# aptracker

./: .flake8  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
aptracker/: __init__.py  api.py  manager.py  session.py
aptracker/_base/: database.py  schema.py
aptracker/database/: schema.py  sqlalchemy.py
aptracker/utils/cli/: create_project.py
example/: basic.py  requirements.txt
