[build-system]
requires = [
    "SQLAlchemy>=2.0",
    "setuptools==82.0.1",
    "wheel==0.46.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "aptracker"
dynamic = ["version"]
description = "Advanced Project Tracker and Manager Application"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = {file = "LICENSE" }

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]

dependencies = [
    "SQLAlchemy>=2.0"
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "aptracker.__version__"}
